today we learn abut cookie parser which is mainly used in services like authenticatio services which is nothing but is a string which share between both user and sever when the user sends request with string to server match that string and send the response back to the user

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/manuch7728/project_one#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
